Fixed off center footer

--- a/src/server/public/style.css
+++ b/src/server/public/style.css
@@ -55,10 +55,8 @@ p {
 	font-family: OpenSans;
 }
 .footer {
-	width: 100%;
 	background-color: #808588;
-	margin: 1em;
-	padding: 1em;
+	margin-top: 1em;
 	position: relative; 
 	bottom: 0; 
 	left: 0; 
